tests/paczka2/big_fuzzy/41186648.err
Error in line 2: r9nAQ A574 35,5
Error in line 4: r9nAQ A872 34,9
Error in line 5: 716 A574 37,2
Error in line 12: 716 A872 96,5
Error in line 21: S281 A872 43,7
Error in line 33: NKxb4Q A872 287,5
Error in line 34: NKxb4Q S554 69,6
Error in line 46: NKxb4Q A872 19,0
Error in line 45: S281 S554 58,2
Error in line 29: Nk8mZ2V88N A872 277,6
Error in line 77: PrFieDyw A872 11,4
Error in line 86: S281 S281 14,54
Error in line 76: Nk8mZ2V88N A872 84,7
Error in line 102: 716 A574 31,8
Error in line 104: Nk8mZ2V88N A574 11,2
Error in line 116: tVlJ9 A574 80,1
Error in line 106: S281 S281 44,9
Error in line 111: NKxb4Q S281 119,8
Error in line 146: 716 A574 129,0
Error in line 144: NKxb4Q A872 59,3
Error in line 165: NKxb4Q A872 87,4
Error in line 166: NKxb4Q S554 53,1
Error in line 168: tVlJ9 A872 11,2
Error in line 174: ?Õ16
Error in line 175: Nk8mZ2V88N S554 0,6
Error in line 176: 716 S281 91,0
Error in line 183: r9nAQ S554 6,4
Error in line 182: Nk8mZ2V88N S281 108,5
Error in line 190: PrFieDyw S554 65,8
Error in line 208: PrFieDyw S281 39,4
Error in line 207: Nk8mZ2V88N S281 56,3
Error in line 223: r9nAQ S281 62,4
Error in line 210: NKxb4Q A574 84,6
Error in line 228: r9nAQ A574 74,1
